website/versioned_docs/version-2.6/guide_manual/images-list.md
---
id: version-2.6-images-list
title: Available Images List
original_id: images-list
---

InfuseAI provides and maintains certain images which can be base images on Docker hub, here available images are:

## TensorFlow

|Framework|Image|CPU / GPU|Python|
|-        |-     |-     |-    |
|TensorFlow 2.1|[infuseai/docker-stacks:tensorflow-notebook-tf-v2-3f48358e](https://hub.docker.com/layers/infuseai/docker-stacks/tensorflow-notebook-tf-v2-3f48358e/images/sha256-ad8d818a534174052ae1399f8b160921b442c96e7ea8d638e60c28484370ed97?context=repo)|`CPU`|3.7|
|TensorFlow 2.1|[infuseai/docker-stacks:tensorflow-notebook-3f48358e-gpu-cuda-10](https://hub.docker.com/layers/infuseai/docker-stacks/tensorflow-notebook-3f48358e-gpu-cuda-10/images/sha256-2407779fe836914b67f1f532377b2ee5eb873b62ae06fa38e4f4e626c712e759?context=repo)|`GPU`<br>`CUDA 10.1`|3.7|
|TensorFlow 2.1|[infuseai/docker-stacks:tensorflow-notebook-tf-v2-py3.6-8dd7f89a](https://hub.docker.com/layers/infuseai/docker-stacks/tensorflow-notebook-tf-v2-py3.6-8dd7f89a/images/sha256-40ce093fa9581001a97c8b47aece9e50972a28784e882736ee308686c2733f2b?context=explore)|`CPU`|3.6|
|TensorFlow 2.1|[infuseai/docker-stacks:tensorflow-notebook-py3.6-3f48358e-gpu-cuda-10](https://hub.docker.com/layers/infuseai/docker-stacks/tensorflow-notebook-py3.6-3f48358e-gpu-cuda-10/images/sha256-284e4a28fc7450ba50559aff631fdd9ea6a0f73b6eeb04aa9651eeb14de81515?context=repo)|`GPU`<br>`CUDA 10.1`|3.6|
|TensorFlow 1.14|[infuseai/docker-stacks:tensorflow-notebook-3f48358e](https://hub.docker.com/layers/infuseai/docker-stacks/tensorflow-notebook-3f48358e/images/sha256-f105e3bc3b8f9b10b9c58f03530ccd5a370484db17aa60e5eef2355426d6f436?context=repo)|`CPU`|3.7|
|TensorFlow 1.14|[infuseai/docker-stacks:tensorflow-notebook-3f48358e-gpu](https://hub.docker.com/layers/infuseai/docker-stacks/tensorflow-notebook-3f48358e-gpu/images/sha256-68b03eddf2eefaee40dc7ad6b2d4a6feecdffbeff35d1af759c466dae170cc54?context=repo)|`GPU`<br>`CUDA 9`|3.7|
|TensorFlow 1.14|[infuseai/docker-stacks:tensorflow-notebook-py3.6-3f48358e](https://hub.docker.com/layers/infuseai/docker-stacks/tensorflow-notebook-py3.6-3f48358e/images/sha256-8612d387f728fb7fce7305e643dcbd9bae7b6fdb0baba2c33ae0b2cccbf39747?context=repo)|`CPU`|3.6|
|TensorFlow 1.14|[infuseai/docker-stacks:tensorflow-notebook-py3.6-3f48358e-gpu](https://hub.docker.com/layers/infuseai/docker-stacks/tensorflow-notebook-py3.6-3f48358e-gpu/images/sha256-f9d9d0130e0357742a777dbc29ba5c17d3dfb3d6300f6fae6593446d4813929f?context=repo)|`GPU`<br>`CUDA 9`|3.6|

---

## PyTorch

|Framework|Image|CPU / GPU|Python|
|-        |-     |-      |-    |
|PyTorch 1.4|[infuseai/docker-stacks:pytorch-notebook-3f48358e](https://hub.docker.com/layers/infuseai/docker-stacks/pytorch-notebook-3f48358e/images/sha256-e21ea65747e5c46d204554a50b5c3ca360d4442362b92c6aaa274835deaaa89d?context=repo)|`CPU`|3.7|
|PyTorch 1.4|[infuseai/docker-stacks:pytorch-notebook-3f48358e-gpu](https://hub.docker.com/layers/infuseai/docker-stacks/pytorch-notebook-3f48358e-gpu/images/sha256-c82057c234e50c958081fe1f8a8df05aea6ec9efb6d5567d55a7fb917e86d931?context=repo)|`GPU`<br>`CUDA 9`|3.7|
|PyTorch 1.4|[infuseai/docker-stacks:pytorch-notebook-py3.6-3f48358e](https://hub.docker.com/layers/infuseai/docker-stacks/pytorch-notebook-py3.6-3f48358e/images/sha256-a951d824a9bc802c85fb0259658a94c102651a9defd1ddd0a9de928ac097f241?context=repo)|`CPU`|3.6|
|PyTorch 1.4|[infuseai/docker-stacks:pytorch-notebook-py3.6-3f48358e-gpu](https://hub.docker.com/layers/infuseai/docker-stacks/pytorch-notebook-py3.6-3f48358e-gpu/images/sha256-15875a752f89d39d853a8b4b17a6477414def58875c3ece7ef5b6bfebb44a9ac?context=repo)|`GPU`<br>`CUDA 9`|3.6|
|PyTorch 1.1|[infuseai/docker-stacks:pytorch-notebook-14fb17d1](https://hub.docker.com/layers/infuseai/docker-stacks/pytorch-notebook-14fb17d1/images/sha256-6b8127b7a9692faea7bbd85964c37752236748625d59e387d5ffd3d7b0e08970?context=explore)|`CPU`|3.7|
|PyTorch 1.1|[infuseai/docker-stacks:pytorch-notebook-14fb17d1-gpu](https://hub.docker.com/layers/infuseai/docker-stacks/pytorch-notebook-14fb17d1-gpu/images/sha256-f61cf5ca8d0d5b8bb19a330ad2c6196d31fe0ecfb41b39a8b88259b6712e18d6?context=explore)|`GPU`<br>`CUDA 9`|3.7|
|PyTorch 1.1|[infuseai/docker-stacks:pytorch-notebook-py3.6-8dd7f89a](https://hub.docker.com/layers/infuseai/docker-stacks/pytorch-notebook-py3.6-8dd7f89a/images/sha256-83668e13fd408eef969907a2d4b81cef9055450efb9f4621af0a53340371ef37?context=explore)|`CPU`|3.6|
|PyTorch 1.1|[infuseai/docker-stacks:pytorch-notebook-py3.6-8dd7f89a-gpu](https://hub.docker.com/layers/infuseai/docker-stacks/pytorch-notebook-py3.6-8dd7f89a-gpu/images/sha256-961cf0a060b32d3cb93a2c02395b2455e630f90318a8f7222887ef9775d1360d?context=explore)|`GPU`<br>`CUDA 9`|3.6|

---

## Base

|Name|Image|CPU / GPU|Python|
|-   |-     |-      |-    |
|AI notebook|[infuseai/docker-stacks:ai-notebook-3f48358e](https://hub.docker.com/layers/infuseai/docker-stacks/ai-notebook-3f48358e/images/sha256-3adcdbcd4a9deef86c682364206b1d2582941406f297e7ad031e7c955469de6f?context=repo)|`CPU`|3.7|
|AI notebook|[infuseai/docker-stacks:ai-notebook-3f48358e-gpu-cuda-10](https://hub.docker.com/layers/infuseai/docker-stacks/ai-notebook-3f48358e-gpu-cuda-10/images/sha256-f9b6965c78e3e04337092b54baafb2b983ac0180fd0c1d0ec7660da9f05209e4?context=repo)|`GPU`<br>`CUDA 10.1`|3.7|
|AI notebook|[infuseai/docker-stacks:ai-notebook-3f48358e-gpu](https://hub.docker.com/layers/infuseai/docker-stacks/ai-notebook-3f48358e-gpu/images/sha256-ba1ad0d0e3aa80b23457f2778fc8dfe26e6fa5f4de8e76e9572ec1d060f8b084?context=repo)|`GPU`<br>`CUDA 9`|3.7|
|AI notebook|[infuseai/docker-stacks:ai-notebook-py3.6-3f48358e](https://hub.docker.com/layers/infuseai/docker-stacks/ai-notebook-py3.6-3f48358e/images/sha256-ae962fc8aa0406a061e9b40e0af06690bfc49a355282e50fddca195294232ba9?context=repo)|`CPU`|3.6|
|AI notebook|[infuseai/docker-stacks:ai-notebook-py3.6-3f48358e-gpu-cuda-10](https://hub.docker.com/layers/infuseai/docker-stacks/ai-notebook-py3.6-3f48358e-gpu-cuda-10/images/sha256-bb5df2b75f835daa6d0868cff01c8b8dbe65f9ef3157d6af063c5f733ae797b4?context=repo)|`GPU`<br>`CUDA 10.1`|3.6|
|AI notebook|[infuseai/docker-stacks:ai-notebook-py3.6-3f48358e-gpu](https://hub.docker.com/layers/infuseai/docker-stacks/ai-notebook-py3.6-3f48358e-gpu/images/sha256-1201041707de437a1d9c8bb329ba98335e1bac04a06a163ccce0e66c48abdd29?context=repo)|`GPU`<br>`CUDA 9`|3.6|